# bootc-installer

./: .gitignore  .gitmodules  AGENTS.md  BUILD_ALL_VARIANTS.sh  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  MULTI_VARIANT_BUILD.md  QUALIFY_SOFTWARE.sh  README.md  btrfs-progs.tar.xz  codecov.yml  demo.json  dev.sh  meson.build  meson_options.txt  recipe.json  run-dev.sh
.agents/: AGENTS.md
.agents/skills/bootc-installer/: INDEX.md  SKILL.md
.agents/skills/bootc-installer/references/: PITFALLS.md
.github/: CI_CD_GUIDE.md  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml
.github/workflows/: build-flatpaks.yml  flatpak.yml  go-test.yml  nightly.yml  python-test.yml  validate-flatpak.yml
bootc_installer/: bootc-installer.gresource.xml  kde-bootc-installer.in  main.py  main_qt.py  meson.build  xfce-bootc-installer.in
bootc_installer/core/: disks.py  meson.build  system.py  timezones.py
bootc_installer/data/: credits.json  dinosaurs.json  meson.build  tracks.json
bootc_installer/defaults/: conn_check.py  disk.py  encryption.py  image.py  keyboard.py  language.py  meson.build  network.py  nvidia.py  qr_companion.py  slurp.py  theme.py  timezone.py  user.py  vm.py  welcome.py
bootc_installer/gtk/: confirm.blp  default-conn-check.blp  default-disk.blp  default-encryption.blp  default-hardware.blp  default-image.blp  default-keyboard.blp  default-language.blp  default-network.blp  default-nvidia.blp  default-slurp.blp  default-theme.blp  default-timezone.blp  default-users.blp  default-vm.blp  default-welcome.blp  dialog-credits.blp  dialog-disk-confirm.blp  dialog-disk.blp  dialog-output.blp  dialog-poweroff.blp  dialog-recovery.blp  dialog.blp  done.blp  layout-preferences.blp  layout-yes-no.blp  progress.blp  recovery-key.blp  tour.blp  widget-choice-expander.blp  widget-choice.blp  widget-disk.blp  widget-page-header.blp  widget-partition.blp  window-cpu.blp  window-ram.blp  window-unsupported.blp  window.blp
bootc_installer/kde/: main.qml
bootc_installer/layouts/: preferences.py  yes_no.py
bootc_installer/utils/: builder.py  codec_check.py  finals.py  meson.build  pastry_compat.py  phone_companion.py  processor.py  progress_parser.py  recipe.py  run_async.py
bootc_installer/views/: confirm.py  confirm_data.py  done.py  meson.build  progress.py  recovery_key.py  tour.py
bootc_installer/widgets/: page_header.py
bootc_installer/windows/: dialog.py  dialog_credits.py  dialog_output.py  dialog_poweroff.py  dialog_recovery.py  main_window.py  meson.build  window_cpu.py  window_ram.py  window_unsupported.py
data/: installer.desktop  meson.build  org.bootcinstaller.Installer.Devel.desktop  org.bootcinstaller.Installer.appdata.xml.in  org.bootcinstaller.Installer.desktop.in  org.kdeinstaller.Installer.appdata.xml.in  org.kdeinstaller.Installer.desktop.in  org.xfceinstaller.Installer.appdata.xml.in  org.xfceinstaller.Installer.desktop.in
data/icons/: meson.build
data/polkit/: org.kdeinstaller.Installer.policy  org.xfceinstaller.Installer.policy
debug/260610-0100-quality-audit/: debug-results.tsv  findings.md
docs/: live-iso.md
docs/features/: gstreamer-codec-validation.md  libpastry-integration.md  qr-phone-companion.md  soundtrack-qr-codes.md
docs/skills/: INDEX.md  PITFALLS.md  SKILL.md
docs/superpowers/plans/: 2026-03-29-composefs-fisherman.md  2026-03-30-boot-verification.md  2026-03-30-proportional-progress-tracking.md  2026-06-14-ux-polish.md
docs/superpowers/specs/: 2026-03-30-proportional-progress-tracking-design.md  ux-ubuntu-provision.md
docs/test-plans/: dakota-tpm2-validation.md  demo-mode-e2e.md  e2e-feature-verification.md  encryption-matrix.md  failure-paths.md  release-qualification.md
flatpak/: org.bootcinstaller.Installer.Devel.json  org.bootcinstaller.Installer.json  org.kdeinstaller.Installer.json  org.xfceinstaller.Installer.json
scripts/: generate_soundtrack_qrs.py
tests/integration/: test_e2e_install.py
tests/ui/: conftest.py  test_confirm_progress.py  test_demo_e2e.py  test_done_credits.py  test_should_show.py  test_wizard.py
tests/unit/: test_branding_parity.py  test_builder.py  test_codec_check.py  test_confirm_helpers.py  test_confirm_view.py  test_conn_check.py  test_defaults_misc.py  test_dialog_recovery.py  test_disk.py  test_disks.py  test_diskutils.py  test_done.py  test_encryption.py  test_finals.py  test_image_helpers.py  test_keyboard.py  test_keymaps.py  test_language.py  test_layouts.py  test_locale.py  test_main_args.py  test_main_window.py  test_meson_sources.py  test_network_helpers.py  test_page_header.py  test_pastry_compat.py  test_phone_companion.py  test_processor.py  test_progress.py  test_progress_parser.py  test_qr_companion.py  test_recipe.py  test_recipe_loader.py  test_recovery_key.py  test_run_async.py  test_slurp_helpers.py  test_system.py  test_timezone.py  test_tour_helpers.py  test_user_validation.py  (+2 more)
